# mygarage

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUN_MIGRATION_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTINUATION_PROMPT.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  MIGRATION_BASELINE.md  PHASE3_SUMMARY.md  README.md  RELEASING.md  SECURITY.md  TRANSLATING.md  TRANSLATIONS.md  VITE_VS_BUN_BUNDLER.md  compose.dev.yaml  compose.example.yml  compose.yaml  docker-compose.test.yml  fix_log_injection.py  package-lock.json  test-production-deployment.sh
backend/: Dockerfile.dev  Dockerfile.test  pyproject.toml  pytest.ini  unlink_oidc_user.sh  unlink_oidc_wrapper.py
backend/app/: config.py  database.py  exceptions.py  main.py  middleware.py
backend/app/constants/: fuel.py  i18n.py
backend/app/migrations/: 001_add_vin_fields.py  002_update_address_book_schema.py  003_add_window_sticker_fields.py  004_add_window_sticker_enhanced_fields.py  005_add_vehicle_photo_thumbnails.py  006_update_service_type_constraint.py  007_add_fuel_hauling_column.py  008_add_spot_rental_utilities.py  009_add_fuel_propane_column.py  010_migrate_to_argon2.py  011_add_oidc_fields.py  012_security_hardening.py  013_add_user_id_to_vehicles.py  014_hydrate_legacy_photos.py  015_add_oidc_pending_links.py  016_add_unit_preference.py  017_add_vehicle_archive.py  018_add_spot_rental_billings.py  019_add_ev_support.py  020_add_travel_trailer_type.py  021_add_propane_tank_columns.py  022_redesign_service_type_schema.py  023_add_maintenance_templates.py  024_add_tsbs_table.py  025_add_shop_finder_fields.py  026_add_detailing_category.py  027_add_poi_support.py  028_maintenance_overhaul.py  029_cleanup_migrated_reminders.py  030_migrate_service_attachments.py  031_add_service_cost_breakdown.py  032_add_livelink_tables.py  033_seed_dtc_definitions.py  034_add_livelink_settings.py  035_add_odometer_source.py  036_add_mqtt_settings.py  037_add_family_multiuser_system.py  038_add_def_tracking.py  039_backfill_service_visit_totals.py  040_drop_service_records_table.py  (+41 more)
backend/app/models/: __init__.py  address_book.py  attachment.py  audit_log.py  csrf_token.py  def_record.py  document.py  drive_session.py  dtc_definition.py  fuel.py  insurance.py  livelink_device.py  livelink_firmware_cache.py  livelink_parameter.py  location_point.py  maintenance_schedule_item.py  maintenance_template.py  note.py  odometer.py  oidc_pending_link.py  oidc_state.py  photo.py  recall.py  reminder.py  sd_log_ingest_state.py  service.py  service_line_item.py  service_visit.py  settings.py  spot_rental.py  spot_rental_billing.py  supply.py  tax.py  toll.py  tsb.py  user.py  vehicle.py  vehicle_dtc.py  vehicle_share.py  vehicle_telemetry.py  (+5 more)
backend/app/routes/: __init__.py  address_book.py  analytics.py  attachments.py  auth.py  backup.py  calendar.py  dashboard.py  def_routes.py  documents.py  export.py  family.py  fuel.py  import_data.py  insurance.py  livelink.py  livelink_admin.py  livelink_vehicle.py  maintenance_schedule.py  maintenance_templates.py  notes.py  notifications.py  odometer.py  oidc.py  photos.py  poi.py  quick_entry.py  recall.py  reminders.py  reports.py  service.py  service_visits.py  settings.py  shop_discovery.py  spot_rental.py  spot_rental_billing.py  supplies.py  tax.py  toll.py  tsb.py  (+7 more)
backend/app/schemas/: __init__.py  address_book.py  analytics.py  attachment.py  calendar.py  dashboard.py  def_record.py  document.py  drive_session.py  dtc.py  family.py  fuel.py  insurance.py  livelink.py  livelink_ingest.py  maintenance_schedule.py  maintenance_template.py  note.py  odometer.py  photo.py  poi.py  recall.py  reminder.py  service.py  service_visit.py  settings.py  shop_discovery.py  spot_rental.py  spot_rental_billing.py  supply.py  tax.py  telemetry.py  toll.py  torque.py  tsb.py  user.py  vehicle.py  vendor.py  vin.py  warranty.py  (+2 more)
backend/app/services/: __init__.py  analytics_service.py  audit_logger.py  auth.py  backup_service.py  def_service.py  device_command_service.py  document_ocr.py  dtc_service.py  family_dashboard_service.py  file_upload_service.py  firmware_service.py  fuel_service.py  insurance_pdf_parser.py  insurance_service.py  livelink_service.py  location_service.py  maintenance_schedule_service.py  maintenance_template_service.py  mqtt_subscriber.py  nhtsa.py  oidc.py  photo_service.py  poi_discovery.py  provider_usage.py  recall_service.py  reminder_service.py  sd_backfill_service.py  sd_log_client.py  service_service.py  service_visit_service.py  session_service.py  settings_init.py  settings_service.py  sharing_service.py  shop_discovery.py  spot_rental_service.py  supply_service.py  tax_service.py  telemetry_service.py  (+11 more)
backend/app/tasks/: livelink_tasks.py  scheduled.py
backend/app/utils/: __init__.py  autopid_normalizer.py  cache.py  currency.py  datetime_utils.py  def_sync.py  error_handlers.py  file_validation.py  fuel_station_sync.py  html_base.py  livelink_mock_sender.py  logging_utils.py  odometer_sync.py  path_validation.py  pdf_charts.py  pdf_components.py  pdf_garage_report.py  pdf_generator.py  pdf_styles.py  pdf_vehicle_report.py  request_scheme.py  secret_key.py  units.py  url_validation.py  vin.py
backend/migrations/: add_vin_fields.py  consolidate_service_types.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  pg_comprehensive_test.py  pg_issue_regression_test.py  pg_migration_path_test.py  pg_smoke_test.py  test_address_book_update_poi.py  test_address_book_vendor_sync.py  test_analytics_routes.py  test_analytics_service.py  test_config_root_path.py  test_currency.py  test_index_base_injection.py  test_oidc_issuer_trailing_slash.py  test_oidc_prefix_urls.py  test_units.py
backend/tests/integration/: _cascade.py  conftest.py  test_cascade_invariants.py  test_fuel_economy_pairing.py  test_vehicle_delete_integrity.py
backend/tests/migrations/: _baseline.py  conftest.py  test_044_sync_address_book.py  test_053_metric_canonical.py  test_054_extended_fuel_tracking.py  (+33 more)
backend/tools/: gen_migration_index.py
(+701 files in other folders)
