[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mygarage"
version = "2.21.0"
description = "Self-hosted vehicle maintenance tracking application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "granian>=2.7.0",
    "sqlalchemy>=2.0.44",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",  # PostgreSQL async driver
    "psycopg2-binary>=2.9.10",  # PostgreSQL sync driver for migrations
    "pydantic>=2.12.3",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.18",
    "httpx>=0.27.2",
    "python-dateutil>=2.9.0",
    "apscheduler>=3.11.1",
    "pillow>=12.0.0",
    "pillow-heif>=0.17.0",
    "reportlab>=4.0.0",
    "pandas>=2.3.3",
    "email-validator>=2.0.0",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.5",  # OIDC/OAuth2 authentication
    "pymupdf>=1.25.0",
    "pytesseract>=0.3.13",
    "aiosmtplib>=3.0.0",  # Async SMTP for email notifications
    "pyyaml>=6.0.1",  # YAML parsing for maintenance templates
    "aiomqtt>=2.3.0",  # Async MQTT client for LiveLink WiCAN support
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "pandas-stubs>=2.3.3.260113",
    "types-Pillow>=10.2.0.20240822",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"app/models/*.py" = ["E402"]
"app/routes/analytics.py" = ["E402"]
"app/services/window_sticker_parsers/*.py" = ["E402"]
"app/services/poi/osm.py" = ["N806"]  # Haversine formula uses math notation (R, Δφ, Δλ)
"tests/*" = ["S101"]

[tool.pyright]
# Pyright strict type checking configuration for MyGarage backend
# Version: 1.1.407
# Reference: https://microsoft.github.io/pyright/#/configuration

# Project Structure
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.venv",
    "**/venv",
]
pythonVersion = "3.14"
pythonPlatform = "Linux"

# Type Checking Mode: Strict
# This enables the most rigorous type checking for production code quality
typeCheckingMode = "strict"

# Strict Mode Enables These Checks by Default:
# - reportMissingTypeStubs: warning
# - reportUnknownArgumentType: warning
# - reportUnknownMemberType: warning
# - reportUnknownParameterType: warning
# - reportUnknownVariableType: warning
# - reportUntypedFunctionDecorator: warning
# - reportUntypedClassDecorator: warning
# - reportUntypedBaseClass: warning
# - reportUntypedNamedTuple: warning

# Diagnostic Overrides
# These suppressions are documented in Phase 1 & Phase 2 type fixing sessions
# See: /srv/raid0/docker/documents/history/mygarage/2025-12-31-*.md

# === Critical Error Suppressions (Should be 'error' level) ===
reportMissingImports = "none"  # Third-party libraries without type stubs (pandas, OCR libs, reportlab)
reportMissingModuleSource = "none"  # ReportLab sub-modules with runtime-only imports

# === High Priority Suppressions (file-level overrides in place) ===
reportAttributeAccessIssue = "none"  # SQLAlchemy ORM descriptors (Column[T] → T at runtime)
reportGeneralTypeIssues = "none"  # SQLAlchemy boolean conditionals and type narrowing
reportArgumentType = "none"  # FastAPI dependency injection, optional handling, function overloads
reportReturnType = "none"  # Business logic guarantees (control flow analysis limitations)
reportOptionalMemberAccess = "none"  # Framework guarantees (FastAPI, validated inputs)
reportOptionalOperand = "none"  # Arithmetic/comparison on validated non-None values

# === Medium Priority Suppressions ===
reportCallIssue = "none"  # Function overload resolution (open(), method signatures)
reportIncompatibleMethodOverride = "none"  # Intentional design pattern (**kwargs extensibility)
reportPossiblyUnboundVariable = "none"  # Import guard pattern for optional dependencies

# === Low Priority Suppressions (code quality) ===
reportUnusedImport = "warning"  # Ruff handles this via F401
reportUnusedVariable = "warning"  # Ruff handles this via F841
reportUnusedFunction = "warning"  # Helper functions, utilities
reportUnusedClass = "warning"  # Base classes, mix-ins

# === Type Stub Quality ===
reportMissingTypeStubs = "warning"  # Known issue - many Python libraries lack stubs
reportUnknownArgumentType = "warning"  # Due to missing stubs in third-party libraries
reportUnknownMemberType = "warning"  # SQLAlchemy dynamic attribute access
reportUnknownParameterType = "warning"  # Due to missing stubs
reportUnknownVariableType = "warning"  # Due to missing stubs

# === Decorator Type Safety ===
reportUntypedFunctionDecorator = "none"  # FastAPI @app.get(), @app.post(), SlowAPI @limiter.limit(), etc.
reportUntypedClassDecorator = "warning"  # SQLAlchemy declarative base
reportUntypedBaseClass = "warning"  # Base classes from libraries without stubs

# === Strict Checks to Keep Enabled ===
reportInvalidTypeForm = "error"  # Invalid type annotation syntax
reportDuplicateImport = "error"  # Code quality issue
reportWildcardImportFromLibrary = "error"  # Security and maintainability
reportPrivateUsage = "warning"  # Accessing private/protected members
reportConstantRedefinition = "none"  # Feature flags are intentionally reassigned
reportIncompatibleVariableOverride = "warning"  # Pydantic model field overrides allowed
reportInconsistentConstructor = "error"  # __init__ signature mismatches
reportOverlappingOverload = "error"  # Function overload conflicts
reportUninitializedInstanceVariable = "warning"  # Pydantic models may have this
reportInvalidStringEscapeSequence = "error"  # Likely a bug
reportUnnecessaryComparison = "none"  # Defensive None checks are intentional
reportUnknownLambdaType = "none"  # Lambda types inferred from context
reportOptionalSubscript = "none"  # Framework guarantees values exist
reportIndexIssue = "none"  # Pandas/data processing with known structure
reportMissingParameterType = "none"  # Internal/framework callbacks with Any types
reportMissingTypeArgument = "none"  # Complex internal structures
reportDeprecated = "warning"  # Pydantic v1 to v2 migration in progress

# === Future Improvements ===
# Consider installing type stub packages to reduce suppressions:
# - pandas-stubs (for pandas)
# - types-reportlab (for reportlab)
# - types-Pillow (for PIL)
# - Contribute stubs for libraries without them (pytesseract, paddleocr, etc.)

# Evaluation: Mypy as secondary type checker
# - Mypy may catch different issues than Pyright
# - SQLAlchemy plugin available for mypy: sqlalchemy.ext.mypy.plugin
# - Run both checkers in CI/CD for maximum coverage
