[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mygarage"
version = "2.21.1"
description = "Self-hosted vehicle maintenance tracking application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "granian>=2.7.1",
    "sqlalchemy>=2.0.46",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",  # PostgreSQL async driver
    "psycopg2-binary>=2.9.11",  # PostgreSQL sync driver for migrations
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "python-dateutil>=2.9.0.post0",
    "apscheduler>=3.11.2",
    "pillow>=12.1.1",
    "pillow-heif>=1.2.0",
    "reportlab>=4.4.10",
    "pandas>=3.0.0",
    "email-validator>=2.3.0",
    "python-magic>=0.4.27",
    "slowapi>=0.1.9",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.8",  # OIDC/OAuth2 authentication
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "aiosmtplib>=5.1.0",  # Async SMTP for email notifications
    "pyyaml>=6.0.3",  # YAML parsing for maintenance templates
    "aiomqtt>=2.5.0",  # Async MQTT client for LiveLink WiCAN support
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
    "pandas-stubs>=3.0.0.260204",
    "types-Pillow>=10.2.0.20240822",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"app/models/*.py" = ["E402"]
"app/routes/analytics.py" = ["E402"]
"app/services/window_sticker_parsers/*.py" = ["E402"]
"app/services/poi/osm.py" = ["N806"]  # Haversine formula uses math notation (R, Δφ, Δλ)
"tests/*" = ["S101"]

[tool.pyright]
# Pyright strict type checking configuration for MyGarage backend
# Version: 1.1.407
# Reference: https://microsoft.github.io/pyright/#/configuration

# Project Structure
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.venv",
    "**/venv",
]
pythonVersion = "3.14"
pythonPlatform = "Linux"

# Type Checking Mode: Strict
# This enables the most rigorous type checking for production code quality
typeCheckingMode = "strict"

# Strict Mode Enables These Checks by Default:
# - reportMissingTypeStubs: warning
# - reportUnknownArgumentType: warning
# - reportUnknownMemberType: warning
# - reportUnknownParameterType: warning
# - reportUnknownVariableType: warning
# - reportUntypedFunctionDecorator: warning
# - reportUntypedClassDecorator: warning
# - reportUntypedBaseClass: warning
# - reportUntypedNamedTuple: warning

# Diagnostic Overrides
# Phase 9 cleanup: reduced "none" suppressions from 13 to 7.
# History: /srv/raid0/docker/documents/history/mygarage/2025-12-31-*.md

# === Remaining suppressions: third-party library gaps ===
reportMissingImports = "none"  # pytesseract, python-magic — no stubs exist
reportUntypedFunctionDecorator = "none"  # FastAPI @app.get(), SlowAPI @limiter.limit()
reportUnknownLambdaType = "none"  # Lambda types inferred from context
reportMissingTypeArgument = "none"  # Complex generic structures (SQLAlchemy/FastAPI)

# === Remaining suppressions: ecosystem pattern limitations ===
reportAttributeAccessIssue = "none"  # SQLAlchemy ORM class-level descriptor access (47 hits)
reportArgumentType = "none"  # FastAPI Depends() injection patterns (184 hits)
reportCallIssue = "none"  # Function overload resolution (31 hits)

# === Promoted from "none" (zero hits or code-fixed) ===
reportMissingModuleSource = "warning"  # Was "none" — 0 hits
reportGeneralTypeIssues = "warning"  # Was "none" — 0 hits
reportIndexIssue = "warning"  # Was "none" — 0 hits
reportIncompatibleMethodOverride = "warning"  # Fixed: insurance parsers match base signature
reportConstantRedefinition = "warning"  # Fixed: declare-before-try pattern
reportMissingParameterType = "warning"  # Fixed: added explicit type annotations

# === Tightened: fixable with code changes (Phase 9) ===
reportReturnType = "warning"  # Fixed by Mapped[T] migration + explicit None handling
reportOptionalMemberAccess = "warning"  # Fixed with None guards / assertions
reportOptionalOperand = "warning"  # Fixed with `or 0` / None checks
reportPossiblyUnboundVariable = "warning"  # Fixed by restructuring import guards
reportOptionalSubscript = "warning"  # Fixed with None checks
reportUnnecessaryComparison = "warning"  # Defensive checks — warnings acceptable

# === Low Priority (code quality) ===
reportUnusedImport = "warning"  # Ruff handles via F401
reportUnusedVariable = "warning"  # Ruff handles via F841
reportUnusedFunction = "warning"  # Helper functions, utilities
reportUnusedClass = "warning"  # Base classes, mix-ins

# === Type Stub Quality ===
reportMissingTypeStubs = "warning"  # Many Python libraries lack stubs
reportUnknownArgumentType = "warning"  # Due to missing stubs
reportUnknownMemberType = "warning"  # Due to missing stubs
reportUnknownParameterType = "warning"  # Due to missing stubs
reportUnknownVariableType = "warning"  # Due to missing stubs

# === Decorator Type Safety ===
reportUntypedClassDecorator = "warning"  # SQLAlchemy declarative base
reportUntypedBaseClass = "warning"  # Base classes from libraries without stubs

# === Strict Checks ===
reportInvalidTypeForm = "error"
reportDuplicateImport = "error"
reportWildcardImportFromLibrary = "error"
reportPrivateUsage = "warning"
reportIncompatibleVariableOverride = "warning"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportUninitializedInstanceVariable = "warning"
reportInvalidStringEscapeSequence = "error"
reportDeprecated = "warning"
